# PyStatsV1

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PATCH_NOTES.txt  README.md  ROADMAP.md  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt
byod_core_gl/: README.md  config.toml
data/: intro_stats_scores.csv  my_data.csv  study_habits.csv
docs/: PSYCH_DESIGN_SWL_S02_S05_FIRST_BATCH.md  PYSTATSV1_DROPIN_026_BOOK1_LAUNCHER.md  PYSTATSV1_DROPIN_030_1_PUBLIC_COMPANION_FIGURE_WORKFLOW_REPAIR.md  PYSTATSV1_DROPIN_030_BOOK1_COMPANION_V02_RELEASE.md  PYSTATSV1_DROPIN_031_1_RELEASE_WORKFLOW_ANNOTATED_TAG_REPAIR.md  PYSTATSV1_DROPIN_031_V0251_POWER_STABILITY_AND_RELEASE_GUARD.md  PYSTATSV1_DROPIN_B_PY310_BUILD_HOTFIX.md  PYSTATSV1_DROPIN_B_V0_23_RELEASE_PREP.md  README.md  ch13_fitness.md  ch13_stroop.md
scripts/: _business_etl.py  _business_recon.py  _business_schema.py  _cli.py  _mpl_compat.py  _pingouin_compat.py  _reporting_style.py  business_ch01_accounting_measurement.py  business_ch02_double_entry_and_gl.py  business_ch03_statements_as_summaries.py  business_ch04_assets_inventory_fixed_assets.py  business_ch05_liabilities_payroll_taxes_equity.py  business_ch06_reconciliations_quality_control.py  business_ch07_preparing_accounting_data_for_analysis.py  business_ch08_descriptive_statistics_financial_performance.py  business_ch09_reporting_style_contract.py  business_ch10_probability_risk.py  business_ch11_sampling_estimation_audit_controls.py  business_ch12_hypothesis_testing_decisions.py  business_ch13_correlation_causation_controlled_comparisons.py  business_ch14_regression_driver_analysis.py  business_ch15_forecasting_foundations.py  business_ch16_seasonality_baselines.py  business_ch17_revenue_forecasting_segmentation_drivers.py  business_ch18_expense_forecasting_fixed_variable_step_payroll.py  business_ch19_cash_flow_forecasting_direct_method_13_week.py  business_ch20_integrated_forecasting_three_statements.py  business_ch21_scenario_planning_sensitivity_stress.py  business_ch22_financial_statement_analysis_toolkit.py  business_ch23_communicating_results_governance.py  business_validate_dataset.py  ch01_introduction.py  ch05_probability_and_statistics.py  ch07_simple_linear_regression.py  ch08_slr_inference.py  ch09_multiple_linear_regression.py  ch11_categorical_interactions.py  ch12_diagnostics.py  ch13_fitness_mixed.py  ch13_stroop_within.py  (+47 more)
tests/: test_book1_launcher.py  test_business_ch01_accounting_measurement.py  test_business_ch02_double_entry_and_gl.py  test_business_ch03_statements_as_summaries.py  test_business_ch04_assets_inventory_fixed_assets.py  test_business_ch05_liabilities_payroll_taxes_equity.py  test_business_ch06_reconciliations_quality_control.py  test_business_ch07_preparing_accounting_data_for_analysis.py  test_business_ch08_descriptive_statistics_financial_performance.py  test_business_ch09_reporting_style_contract.py  test_business_ch10_probability_risk.py  test_business_ch11_sampling_estimation_audit_controls.py  test_business_ch12_hypothesis_testing_decisions.py  test_business_ch13_correlation_causation_controlled_comparisons.py  test_business_ch14_regression_driver_analysis.py  test_business_ch15_forecasting_foundations.py  test_business_ch16_seasonality_baselines.py  test_business_ch17_revenue_forecasting_segmentation_drivers.py  test_business_ch18_expense_forecasting_fixed_variable_step_payroll.py  test_business_ch19_cash_flow_forecasting_direct_method_13_week.py  test_business_ch20_integrated_forecasting_three_statements.py  test_ch13_fitness.py  (+80 more)
(+345 files in other folders)
