[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystatsv1"
version = "0.19.1"
description = "PyStatsV1: applied statistics labs in Python."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PyStatsV1 contributors" }
]
license = "MIT"
license-files = ["LICENSE"]
# Runtime dependencies are installed from requirements.txt in CI.
dependencies = []


[project.scripts]
pystatsv1 = "pystatsv1.__main__:main"
pystatsv1-docs = "pystatsv1.__main__:open_docs_cli"


[project.urls]
"Homepage" = "https://github.com/pystatsv1/PyStatsV1"
"Documentation" = "https://pystatsv1.readthedocs.io"
"Source" = "https://github.com/pystatsv1/PyStatsV1"
"Issues" = "https://github.com/pystatsv1/PyStatsV1/issues"
"PyPI" = "https://pypi.org/project/pystatsv1/"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pystatsv1 = [
  "docs/pystatsv1.pdf",
]

