[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystatsv1"
version = "0.21.3"
description = "PyStatsV1: applied statistics labs in Python."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PyStatsV1 contributors" }
]
license = "MIT"
license-files = ["LICENSE"]
# Runtime dependencies are installed from requirements.txt in CI.
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "pingouin>=0.5",
  "scikit-learn>=1.3",
]


[project.optional-dependencies]
# Student bundle: includes pytest so you can run the Workbook checks.
workbook = [
  "pytest>=8.2",
]

# Contributor bundle: formatting + lint + tests.
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
  "black>=24.0",
]

# Docs bundle: for building Sphinx locally.
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=2.0",
  "myst-parser>=3.0",
]

[project.scripts]
pystatsv1 = "pystatsv1.cli:main"
pystatsv1-docs = "pystatsv1.cli:docs_main"

[project.urls]
"Homepage" = "https://github.com/pystatsv1/PyStatsV1"
"Documentation" = "https://pystatsv1.readthedocs.io"
"Source" = "https://github.com/pystatsv1/PyStatsV1"
"Issues" = "https://github.com/pystatsv1/PyStatsV1/issues"
"PyPI" = "https://pypi.org/project/pystatsv1/"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pystatsv1 = [
  "docs/pystatsv1.pdf",
]

"pystatsv1.assets" = [
  "*.zip",
]
